string updates to the homepage to replace lorem ipsum

--- a/views/splash-home.pug
+++ b/views/splash-home.pug
@@ -8,28 +8,24 @@ append head
 block content
     include splash-navbar.pug
     div.header-content
-        h1 Just Moo it.
+        h1 The legen-dairy to-do list
         div.carousel
             div(class="slide active")
                 img(src="images/office-o.png", alt="" class="")
                 div.carousel-info
                     h2 Tired of Deja-moo? We can help!
-                    p Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua
             div.slide
                 img(src="images/wavingCow-o.png", alt="" class="")
                 div.carousel-info
-                    h2 Got Milk?
-                    p Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua
+                    h2 Got Milk? Thanks to this site, you'll never forget again.
             div.slide
                 img(src="images/moosic-o.png", alt="" class="")
                 div.carousel-info
-                    h2 Cow-ABUNGA!
-                    p Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua
+                    h2 Stop thinking about your to-dos and let the app remember for you. Cow-ABUNGA!
             div.slide
                 img(src="images/cowblep-o.png", alt="" class="")
                 div.carousel-info
-                    h2 This app is udderly amazing!
-                    p Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua
+                    h2 Prioritize your schedule with this is udderly amazing app!
             div.navigation
                 i(class="fas fa-chevron-left prev-btn")
                 i(class="fas fa-chevron-right next-btn")
