--- a/public/stylesheets/home.css
+++ b/public/stylesheets/home.css
@@ -86,7 +86,9 @@ footer {
 
 h1 {
     margin-top: 25px;
+    padding-top: 50px;
     color: #ffffff;
+    font-size: 2.5em;
 }
 
 .carousel {
@@ -134,8 +136,8 @@ h1 {
 }
 
 .carousel .slide .carousel-info h2 {
-    font-size: 1.5em;
-    font-weight: 800;
+    font-size: 1.4em;
+    font-weight: 500;
 }
 
 .carousel .slide .carousel-info p {
