added repo link to upgrade page.

--- a/views/splash-upgrade.pug
+++ b/views/splash-upgrade.pug
@@ -7,8 +7,8 @@ append head
 block content
     include splash-navbar.pug
     div.header-content
-        h1 Get mooore done today!
-        a(href="#") Upgrade Now
-        h3 Only $999.99 per year
+        h1 Get mooore done today.
+        a(href="https://github.com/PeterShinnn/To-Moo-List") Learn More
+        h3 Only $999.99 per year! Read all about it on our GitHub repo.
         img(src="images/money-cow-o.png", alt="cow money")
     include splash-footer.pug
