--- a/public/stylesheets/upgrade.css
+++ b/public/stylesheets/upgrade.css
@@ -1,21 +1,24 @@
 @import url("/stylesheets/home.css");
 
-.header-content{
+.header-content {
     text-align: center;
 }
 
-.header-content a{
-    color: #FFFFFF;
-    border: 2px solid #d24b03;
-    border-radius: 10px;
+.header-content a {
+    color: #ffffff;
+    border-radius: 5px;
     background-color: #d24b03;
     text-decoration: none;
-    padding: 10px;
+    padding: 12px;
     margin: 40px auto;
     font-size: 20px;
     font-weight: 900;
 }
 
-.header-content h3{
-    color: #FFFFFF;
+.header-content a:hover {
+    background-color: #dddddd75;
+}
+
+.header-content h3 {
+    color: #ffffff;
 }
