added meta data for linkedin

--- a/views/layout.pug
+++ b/views/layout.pug
@@ -6,6 +6,11 @@ html(lang="en")
         meta(charset="UTF-8")
         meta(http-equiv="X-UA-Compatible", content="IE=edge")
         meta(name="viewport", content="width=device-width, initial-scale=1.0")
+        meta(name="title" property="og:title" content="To-Moo-List")
+        meta(property="og:type" content="Website")
+        meta(name="image" property="og:image" content="https://i.postimg.cc/d3x4KwXs/to-moo-list.png")
+        meta(name="description" property="og:description" content="An online to-do list app to help you stay organized and keep track of your tasks/errands.")
+        meta(name="author" content="Christy Chen, Haozhen Shu, Justin Sweeney, Peter Shin")
         link(rel='stylesheet' href='/stylesheets/index.css')
         //- script(src="javascripts/dashboard-list.js")
   body
