fixed few bugs, got rid of meet the team tab, and changed the upgrade to github repo instead

--- a/views/home.pug
+++ b/views/home.pug
@@ -15,13 +15,11 @@ block content
                     li
                         a(href="/") Home
                     li
-                        a(href="/upgrade") Upgrade
+                        a(href="https://github.com/PeterShinnn/To-Moo-List") GitHub
                     li
-                        a(href="/team") Meet the team
-                    li
-                        a(href="/login") Log in
+                        a(href="/login") Log In
                     li(class="signup")
-                        a(href="/signup") Sign up for free
+                        a(href="/signup") Sign Up
             div#demo-user
                 a(href="/demo/login") Demo User
 
