--- a/views/splash-footer.pug
+++ b/views/splash-footer.pug
@@ -5,32 +5,27 @@ footer
                 h4 Christy
                 ul
                     li
-                        a(href="https://www.linkedin.com/in/christywchen/") Linkedin
+                        a(href="https://www.linkedin.com/in/christywchen/" target="_blank" rel="noreferrer noopener") Linkedin
                     li
-                        a(href="https://github.com/christywchen") Github
+                        a(href="https://github.com/christywchen" target="_blank" rel="noreferrer noopener") Github
             div(class="haozhen person")
                 h4 Haozhen
                 ul
                     li
-                        a(href="#") Linkedin
+                        a(href="https://www.linkedin.com/in/haozhen-shu-a5136ab7/" target="_blank" rel="noreferrer noopener") Linkedin
                     li
-                        a(href="https://github.com/Haozhen-Shu") Github
+                        a(href="https://github.com/Haozhen-Shu" target="_blank" rel="noreferrer noopener") Github
             div(class="justin person")
                 h4 Justin
                 ul
                     li
-                        a(href="https://www.linkedin.com/in/jstnswn/") Linkedin
+                        a(href="https://www.linkedin.com/in/jstnswn/" target="_blank" rel="noreferrer noopener") Linkedin
                     li
-                        a(href="https://github.com/jstnswn") Github
+                        a(href="https://github.com/jstnswn" target="_blank" rel="noreferrer noopener") Github
             div(class="peter person")
                 h4 Peter
                 ul
                     li
-                        a(href="https://www.linkedin.com/in/petershin731/") Linkedin
+                        a(href="https://www.linkedin.com/in/petershin731/" target="_blank" rel="noreferrer noopener") Linkedin
                     li
-                        a(href="https://github.com/PeterShinnn") Github
-    div.copyright
-        p &copy; Copyright 2021 To Moo List
-        a(href="#") Terms
-        a(href="#") Privacy
-        a(href="#") Security
+                        a(href="https://github.com/PeterShinnn" target="_blank" rel="noreferrer noopener") Github
