--- a/views/splash-navbar.pug
+++ b/views/splash-navbar.pug
@@ -7,12 +7,10 @@ header
                 li
                     a(href="/") Home
                 li
-                    a(href="/upgrade") Upgrade
-                li
-                    a(href="/team") Meet the team
+                    a(href="https://github.com/PeterShinnn/To-Moo-List" target="_blank" rel="noreferrer noopener") GitHub
                 li
                     a(href="/demo/login") Demo
                 li
-                    a(href="/login") Log in
+                    a(href="/login") Log In
                 li(class="signup")
-                    a(href="/signup") Sign up for free
+                    a(href="/signup") Sign Up
